Fix small adjustemts regarding spacing and text

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
  color:#F9FAF8
 }
 .header-container{
-    padding:20px 40px;
+    padding:20px 80px;
     display:flex;
     justify-content: space-between;
 }
@@ -40,7 +40,7 @@ ul.header-links{
 
 .hero-container {
     display:flex;
-    padding:150px 40px;
+    padding:150px 80px;
     gap:100px;
     align-items: flex-end;
 
@@ -51,7 +51,7 @@ ul.header-links{
 
 }
 .hero-container img {
-    width:200px;
+    width:150px;
     height:200px;
     flex:1 1 auto;
     object-fit: fill;
@@ -109,7 +109,7 @@ button, .call-to-action-container {
     gap:50px;
     margin: 20px 0;
     margin-bottom:80px;
-    width:800px;
+    width:1000px;
 }
 .main-content img {
     width:170px;
@@ -130,7 +130,7 @@ button, .call-to-action-container {
    
 }
 .quote-container > * {
-    flex-basis:800px;
+    flex-basis:1000px;
 }
 
 .call-to-action-container {
@@ -139,23 +139,26 @@ button, .call-to-action-container {
     padding:40px 10px;
     border-radius: 5px;
     color: #e5e7eb;
-    justify-content: space-around;
-    margin:80px 40px;
+    justify-content: space-evenly;
+    margin:80px 80px;
 
     
 }
-.call-to-action-container > * {
-   
+.call-to-action-container h3 {
+    margin-bottom: 15px;
+  
 }
 .call-to-action-container button {
     margin: 0;
-    border:1px solid #F9FAF8;
+    border:2px solid #F9FAF8;
+    align-self:flex-end;
+    padding:10px 60px
 }
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding:30px 0;
+    padding:50px 0;
     color:#e5e7eb
 }
